added createArray function

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title> Javascript Snake</title>
 </head>
 <body>
-<p class="test">test</p>
+	<div id="start">Load</div>
+	<div id="container">
+		
+	</div>
+	<script src="scripts/jquery-dev"></script>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
