--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="start">Load</div>
 	<div id="container">
-		
+		<div id="grid"></div>
 	</div>
 	<script src="scripts/jquery-dev"></script>
 	<script src="scripts/main.js"></script>
