--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="start">Load</div>
-	<div id="container">
+	<div id="container" tabindex="1">
 		<div id="grid"></div>
 	</div>
 	<script src="scripts/jquery-dev"></script>
