--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div id="start">Load</div>
+	<div id="100.100">test</div>
 	<div id="container" tabindex="1">
 		<div id="grid"></div>
 	</div>
