--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="start">Load</div>
 	<div id="100.100">test</div>
+	<div id="stop">stop</div>
 	<div id="container" tabindex="1">
 		<div id="grid"></div>
 	</div>
