added score system

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div id="start">Load</div>
 	<div id="100.100">test</div>
 	<div id="stop">stop</div>
+	<div id="score">Score:</div>
 	<div id="container" tabindex="1">
 		<div id="grid"></div>
 	</div>
